# package-python-ipfy-asset-management-data-engineering-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yaml
ipfy_asset_management_data_engineering_pipeline/: __init__.py  _bank_data_type_detection.py  _data_integration_pipeline.py  orchestration_and_process_execution.py
ipfy_asset_management_data_engineering_pipeline/Boursorama/: __init__.py  _data_integration_pipeline.py  data_pipeline_execution.py
ipfy_asset_management_data_engineering_pipeline/CreditAgricoleAlsace/: __init__.py  _data_integration_pipeline.py  _date_creation_process.py  data_pipeline_execution.py
ipfy_asset_management_data_engineering_pipeline/constants/: euro-swiss-franc-exchange-rate-historical.csv
ipfy_asset_management_data_engineering_pipeline/creditagricolenextbank/: __init__.py  _data_integration_pipeline.py  data_pipeline_execution.py
tests/: test_data_integration_pipeline.py  test_orchestration_and_process_execution.py
